--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ select:focus{
 .single-product .col-2 img{
     padding: 0;
 }
-.single-product.col-2{
+.single-product .col-2{
     padding: 20px;
 }
 .single-product h4{
@@ -352,7 +352,7 @@ input:focus{
     display: flex;
     justify-content: space-between;
 }
-.small-img-row{
+.small-img-col{
     flex-basis: 24%;
     cursor: pointer;
 }
@@ -365,5 +365,15 @@ input:focus{
     }
     .col-2, .col-3, .col-4{
         flex-basis: 100%;
+    }
+    .single-product .row{
+        text-align: left;
+    }
+    .single-product .col-2{
+        padding: 20px 0;
+    }
+    .single-product h1{
+        font-size: 26px;
+        line-height: 32px;
     }
 }
