--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ input:focus{
 }
 
 
-/*-----------media query for less than 600 screen size---------*/
+/*-------------media query for less than 600 screen size---------*/
 @media only screen and (max-width: 600px){
     .row{
         text-align: center;
